fix word wrap on mobile movie component

--- a/app/components/Movie/index.module.css
+++ b/app/components/Movie/index.module.css
@@ -18,6 +18,7 @@
   font-weight: var(--font-weight-bold);
   text-transform: uppercase;
   margin: 0;
+  word-wrap: break-word;
 }
 .container ul.specs {
   appearance: none;
